# agent-academy-msft

./: HACKATHON.md  README.md  pyproject.toml
app/: dashboard.py
scripts/: build_demo_video.py
src/agent_academy_msft/: __init__.py  agent.py  github_data.py
src/agent_academy_msft/plugins/: github_plugin.py
tests/: test_agent_offline.py  test_github_data.py
