[project]
name = "agent-academy-msft"
version = "0.1.0"
description = "PR-reviewer agent on Microsoft Semantic Kernel + Azure OpenAI."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Mukunda Katta" }]
requires-python = ">=3.10"
dependencies = [
    "semantic-kernel>=1.18.0",
    "openai>=1.50.0",
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-academy-msft"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
